tests/flow_errors/unknown_argument_no_args/error.txt
Error: 
    5 | deploy flow without_arg with arg = "snot" end;
      |                              ^^^ Unknown argument: arg